add_executable(TallerEDD
        main.cpp
        classes/Cancion.cpp
        classes/GestorArchivos.cpp
        classes/Reproductor.cpp
        core/menu.cpp
        classes/Cancion.h
        data_structures/Nodo.h
        data_structures/ListaEnlazada.h
        classes/GestorArchivos.h
        core/menu.h
        data_structures/ArbolTrie.h
        data_structures/ArbolTrie.cpp
        data_structures/NodoTrie.h
        classes/ArbolHeap.cpp
        classes/Artista.h
)